<resources>
    <string name="app_name">TraineeTestAndroid</string>
    <string name="coin_icon">Coin Icon</string>
    <string name="error_message">Cлучилась какая-то ошибка :(\nПопробуем снова?</string>
    <string name="try_again">попробовать</string>
    <string name="coin_info_icon">Coin Icon</string>
    <string name="description">Описание</string>
    <string name="categories">Категории</string>
    <string name="error_image">Error Image</string>
    <string name="usd">usd</string>
    <string name="eur">eur</string>
    <string name="list_crypto">Список криптовалют</string>
    <string name="percentage_format_negative">%1$.2f%%</string>
    <string name="percentage_format_positive">+%1$.2f%%</string>
</resources>